--- a/src/pages/Intro/Intro.module.css
+++ b/src/pages/Intro/Intro.module.css
@@ -4,6 +4,6 @@
   margin: 100px auto;
   background-color: var(--black);
   position: relative;
-  background-image: url("../../assests/images/stars.png");
+  background-image: url("../../assets/images/stars.png");
   background-position: -7px;
 }
