--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,13 +5,13 @@
   --main_dialog: #ebf3fc;
   --sol_backgroud: #88bde7;
   --sol_text: #1d449b;
-  --ray_blue: #a3c7f7;
-  --ray_yellow: #ffe27a;
-  --ray_beige: #ffe8d4;
+  --lay_background: rgba(196, 196, 116, 0.493);
+  --lay_blue: #a3c7f7;
+  --lay_yellow: #ffe27a;
+  --lay_beige: #ffe8d4;
 }
 
 body {
   font-family: "Pretendard Variable";
   letter-spacing: -0.1px;
-  background-color: white;
 }
