--- a/src/componets/CrushBar.module.css
+++ b/src/componets/CrushBar.module.css
@@ -2,8 +2,7 @@
 .progress_container {
     width: 295px;
     height: 77px;
-    margin: 10px;
-    text-align: left;
+    margin: 80px;
     background-color: #FFF;
     border: 1px solid rgba(0, 0, 0, 0.23);
     border-radius: 50px;
@@ -21,11 +20,14 @@
     background: rgba(252, 221, 221, 0.65);
     color: rgb(0, 0, 0);
     border-radius: 50px;
-    font-size: 30px;
-
+    font-size: 40px;
+    text-align: center;
 }
 
-img {
-    width: 47px;
-    height: 42px;
+.progress_bar img{
+    width: 50px;
+}
+
+.top_txt{
+    padding-left: 30px;
 }
