--- a/src/pages/Lay/Lay.module.css
+++ b/src/pages/Lay/Lay.module.css
@@ -1,20 +1,36 @@
 .root {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     width: 1440px;
     height: 1024px;
     margin: 100px auto;
-    background-color: var(--lay_background);
+    background-color: rgb(255, 145, 145);
     background-image: url("../../assets/images/stars.png");
-    background-position: -7px;
     position: relative;
 }
 
-.root img {
+.top{
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.img_container {
+    display: flex;
+    justify-content: center;
     width: 100%;
-    max-width: 400px;
-    height: auto;
-    
+}
+
+.img_container img{
+    width: 360px;
+    height: 398px;
+}
+
+.characterWrap {
+    padding-top: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 1s ease;
   }
