--- a/src/pages/Lay/Lay.module.css
+++ b/src/pages/Lay/Lay.module.css
@@ -16,21 +16,20 @@
     justify-content: space-between;
 }
 
+.content{
+    padding: 68px 20px;
+  width: 1440px;
+  display: flex;
+  justify-content: space-around;
+}
+
 .img_container {
+    width: 100%;
     display: flex;
     justify-content: center;
-    width: 100%;
 }
 
 .img_container img{
     width: 360px;
     height: 398px;
 }
-
-.characterWrap {
-    padding-top: 80px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background-color 1s ease;
-  }
