add : 프렌즈 선택 시 이동 기능 추가

--- a/src/componets/FriendSelectBox.module.css
+++ b/src/componets/FriendSelectBox.module.css
@@ -15,11 +15,14 @@
 .friendName {
   position: absolute;
   top: 34px;
+  width: 228px;
 }
 
 .friendImage {
   position: absolute;
-  bottom: 120px;
+  bottom: 100px;
+  width: 331px;
+  height: 453px;
 }
 
 .friendText {
