--- a/src/pages/Intro/Intro.module.css
+++ b/src/pages/Intro/Intro.module.css
@@ -37,8 +37,8 @@
 
 .characterImage {
   position: absolute;
-  bottom: 380px;
-  left: 500px;
+  bottom: 280px;
+  left: 380px;
 }
 
 .solBackground {
@@ -64,7 +64,7 @@
 
 .friendsWrap {
   padding: 68px 20px;
-  width: 1440px;
+  width: 1024pz;
   display: flex;
   justify-content: space-around;
 }
