--- a/src/componets/Quiz.module.css
+++ b/src/componets/Quiz.module.css
@@ -19,21 +19,29 @@
     z-index: 1;
 }
 
-.quiz_list{
-    border-radius: 500px;
+.quiz_content{
+    cursor: pointer;
 }
 
-.quiz_list:hover {
-    background-color: rgba(32, 22, 22, 0.466);
+.quiz_list{
     border-radius: 500px;
-    z-index: 1;
+    fill: rgba(255, 255, 255, 0.80);
+    stroke-width: 1px;
+    stroke: #FFE8D4;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.quiz_list:hover{
+    background-color: rgba(0, 0, 0, 0.285);
 }
 
 .quiz_list_txt{
-    margin: 0;
-    width: 486px;
-    height: 61px;
+    width:100%;
     text-align: center;
     font-size: 20px;
-    z-index: 1;
+    cursor: pointer;
+}
+
+.quiz_answer{
+    
 }
