--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -2,7 +2,7 @@
 @media screen and (min-width:320px){
   .wrap{
     background-color: rgb(255, 255, 255);
-     margin: 10vw;
+    margin: 50px;
     padding: 3vw;
   }
 
@@ -39,6 +39,7 @@
     }
     
   .email, .password {
+      width: 70vw;
       display: flex;
       align-items: center;
       border: 1px solid #ccc;
@@ -47,18 +48,20 @@
     }
     
   .email img, .password img {
-      margin-right: 10px;
+      margin-inline: 10px;
       width: 20px; /* 이미지 크기에 따라 조절하세요 */
       height: 20px; /* 이미지 크기에 따라 조절하세요 */
     }
     
   .email input, .password input {
+      width: 70vw;
+      height: 40px;
       background-color: rgba(236, 236, 236, 1);
       border: none;
       outline: none;
     }
     
-  button {
+  .button {
       width: 70vw;
       background-color: rgba(0, 70, 255, 1);
       color: white;
@@ -69,9 +72,9 @@
       cursor: pointer;
     }
     
-  button:hover {
-      background-color: rgba(163, 199, 247, 1);
-    }
+  .button:hover {
+    background-color: rgba(163, 199, 247, 1);
+  }
   
   .link{
     color: rgba(0, 70, 255, 1);
@@ -97,18 +100,17 @@
   }
 
   .email, .password {
-      width: 25vw;
+      width: 30vw;
     }
     
-  button {
-      width: 25vw;
+  .button {
+      width: 30vw;
     }
     
-  button:hover {
+  .button:hover {
       background-color: rgba(163, 199, 247, 1);
     }
 }
-
 
 
 @media screen and (min-width:1024px){
