--- a/src/pages/Signup/Signup.module.css
+++ b/src/pages/Signup/Signup.module.css
@@ -2,7 +2,7 @@
 @media screen and (min-width:320px){
   .wrap{
     background-color: rgb(255, 255, 255);
-     margin: 10vw;
+    margin: 50px;
     padding: 3vw;
   }
 
@@ -39,6 +39,7 @@
     }
     
   .email, .password {
+      width: 70vw;
       display: flex;
       align-items: center;
       border: 1px solid #ccc;
@@ -47,18 +48,21 @@
     }
     
   .email img, .password img {
-      margin-right: 10px;
+      margin-inline: 10px;
       width: 20px; /* 이미지 크기에 따라 조절하세요 */
       height: 20px; /* 이미지 크기에 따라 조절하세요 */
     }
     
   .email input, .password input {
+      width: 70vw;
+      height: 40px;
       background-color: rgba(236, 236, 236, 1);
       border: none;
       outline: none;
     }
     
-  button {
+  .button {
+      width: 70vw;
       background-color: rgba(0, 70, 255, 1);
       color: white;
       border: none;
@@ -68,9 +72,9 @@
       cursor: pointer;
     }
     
-  button:hover {
-      background-color: rgba(163, 199, 247, 1);
-    }
+  .button:hover {
+    background-color: rgba(163, 199, 247, 1);
+  }
   
   .link{
     color: rgba(0, 70, 255, 1);
@@ -90,7 +94,22 @@
 
 
 @media screen and (min-width:768px){
+  .wrap{
+    display: flex;
+    justify-content: space-between;
+  }
 
+  .email, .password {
+      width: 30vw;
+    }
+    
+  .button {
+      width: 30vw;
+    }
+    
+  .button:hover {
+      background-color: rgba(163, 199, 247, 1);
+    }
 }
 
 
@@ -99,31 +118,5 @@
       display: flex;
       justify-content: space-between;
   }
-
-  .email, .password {
-    display: flex;
-    align-items: center;
-    border: 1px solid #ccc;
-    background-color: rgba(236, 236, 236, 1);
-    border-radius: 5px;
-  }
-
-  .email input, .password input {
-    background-color: rgba(236, 236, 236, 1);
-    border: none;
-    outline: none;
-  }
-  
-button {
-    background-color: rgba(0, 70, 255, 1);
-    color: white;
-    border: none;
-    border-radius: 5px;
-    padding: 15px;
-    margin-bottom: 20px;
-    cursor: pointer;
-  }
-
-
 }
 
