--- a/src/pages/Molly/Molly.module.css
+++ b/src/pages/Molly/Molly.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 1024px;
   height: 767px;
-  margin: 100px auto;
+  margin: 0 auto;
   background: linear-gradient(
     180deg,
     rgba(255, 224, 224, 0.69) 0%,
@@ -13,10 +13,9 @@
 }
 
 .top {
-  margin: 0;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .content {
