style : 몰리 헤더 변경

--- a/src/pages/Molly/Molly.module.css
+++ b/src/pages/Molly/Molly.module.css
@@ -12,6 +12,11 @@
   position: relative;
 }
 
+.introHeader {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .top {
   display: flex;
   align-items: center;
