--- a/src/componets/ProgressBar.module.css
+++ b/src/componets/ProgressBar.module.css
@@ -13,7 +13,7 @@
 
   
   
-.progress_bar {
+.progress_bar_lay {
     display: flex;
     justify-content: left;
     height: 32.31px;
@@ -21,11 +21,20 @@
     background: rgba(163, 199, 247, 1);
     border-radius: 100px;
     font-size: 30px;
-    
-
 }
 
-.progress_bar img {
+.progress_bar_molly {
+    display: flex;
+    justify-content: left;
+    height: 32.31px;
+    align-items: center;
+    background: #B0A1CC;
+    border-radius: 100px;
+    font-size: 30px;
+}
+
+.progress_container img {
+    margin-left: 60px;
+    margin-bottom: 10px;
     width: 80px;
-    padding: 20px;
 }
