--- a/src/pages/Molly/Molly.module.css
+++ b/src/pages/Molly/Molly.module.css
@@ -24,10 +24,8 @@
 }
 
 .content {
-  padding: 68px 20px;
-  width: 1440px;
-  display: flex;
-  justify-content: space-around;
+  width: 1024px;
+  height: 767px;
 }
 
 .character_wrap {
