--- a/src/pages/Molly/Molly.module.css
+++ b/src/pages/Molly/Molly.module.css
@@ -37,6 +37,7 @@
 .character_wrap img {
   width: 360px;
 }
+
 .dialogText {
   width: 600px;
   height: 100px;
@@ -50,4 +51,24 @@
   letter-spacing: 2px;
   line-height: 1.5;
   z-index: 100;
+}
+
+.bubble_container {
+  position: relative;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.bubble_hint {
+  position: absolute;
+  top: 70px;
+  left: -20px;
+  z-index: 2;
+}
+
+.bubble_progress{
+  position: absolute;
+  top: 100px;
+  left: 200px;
+  z-index: 2;
 }
