--- a/src/pages/Molly/Molly.module.css
+++ b/src/pages/Molly/Molly.module.css
@@ -72,3 +72,27 @@
   left: 200px;
   z-index: 2;
 }
+
+.bubble_year{
+  position: absolute;
+  top: 100px;
+  left: 750px;
+  z-index: 2;
+}
+
+.bubble_buy{
+  position: absolute;
+  top: 350px;
+  left: 100px;
+  z-index: 2;
+
+}
+
+.bubble_sell{
+  position: absolute;
+  top: 350px;
+  left: 600px;
+  z-index: 2;
+
+}
+
