--- a/src/pages/Lay/Lay.module.css
+++ b/src/pages/Lay/Lay.module.css
@@ -5,77 +5,100 @@
   position: relative;
   background-image: url("../../assets/images/stars.png");
   background-repeat: repeat;
-  animation: backgroundMove 20s linear infinite;
+  animation: backgroundMove 10s linear infinite;
   transition: background-color 0.5s ease;
 }
 
 @keyframes fadeIn {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
+  from {
+    opacity: 0;
   }
-  
-@keyframes backgroundMove {
-    0% {
-    background-position: 0 0; 
-    }
-    50% {
-    background-position: 0 100%;
-    }
-    100% {
-    background-position: 0 0; 
-}
-}
-.top{
-    margin: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  to {
+    opacity: 1;
+  }
 }
 
-.content{
-    padding: 68px 20px;
+@keyframes backgroundMove {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 0 100%;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+.top {
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.content {
+  padding: 68px 20px;
   width: 1440px;
   display: flex;
   justify-content: space-around;
 }
 
 .character_wrap {
-    width: 100%;
-    display: flex;
-    justify-content: center;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
-.character_wrap img{
-    width: 360px;
+.character_wrap img {
+  width: 360px;
 }
 
 .dialogText {
-    width: 600px;
-    height: 100px;
-    position: absolute;
-    bottom: 120px;
-    left: 220px;
-    white-space: "pre-wrap";
-    font-size: 24px;
-    color: var(--black);
-    text-align: center;
-    letter-spacing: 2px;
-    line-height: 1.5;
-    z-index: 100;
-  }
+  width: 600px;
+  height: 100px;
+  position: absolute;
+  bottom: 120px;
+  left: 220px;
+  white-space: "pre-wrap";
+  font-size: 24px;
+  color: var(--black);
+  text-align: center;
+  letter-spacing: 2px;
+  line-height: 1.5;
+  z-index: 100;
+}
 
-  .solBackground {
-    background: linear-gradient(0deg, #a3c7f7 0%, #d4eaf7 100%);
-    transition: background-color 1s ease;
-  }
+.solBackground {
+  background: linear-gradient(0deg, #a3c7f7 0%, #d4eaf7 100%);
+  transition: background-color 1s ease;
+}
 
-  .layBackground {
-    background: linear-gradient(180deg, rgba(255, 232, 212, 0.70) 0%, rgba(255, 226, 122, 0.00) 100%);
-    transition: background-color 1s ease;
-    /* animation: fadeIn 1s ease; */
-  }
-  
+.layBackground {
+  background-color: var(--lay_yellow);
+  transition: background-color 1s ease;
+  /* animation: fadeIn 1s ease; */
+}
+
+.solutionApiText {
+  width: 700px;
+  font-size: 24px;
+  text-align: center;
+  letter-spacing: 2px;
+  line-height: 1.5;
+  margin: 0;
+  position: absolute;
+  top: 150px;
+  left: 200px;
+}
+
+.solutionManagerText {
+  width: 700px;
+  font-size: 24px;
+  text-align: center;
+  letter-spacing: 2px;
+  line-height: 1.5;
+  margin: 0;
+  position: absolute;
+  top: 150px;
+  left: 200px;
+}
