style : 프로그레스바 & 호감도바 수정

--- a/src/pages/Molly/Molly.module.css
+++ b/src/pages/Molly/Molly.module.css
@@ -20,7 +20,16 @@
 .top {
   display: flex;
   align-items: center;
+  justify-content: center;
   justify-content: space-around;
+}
+
+.bubble_container {
+  margin-left: 35px;
+}
+
+.progressWrap {
+  width: 630px;
 }
 
 .content {
