--- a/src/componets/CrushBar.module.css
+++ b/src/componets/CrushBar.module.css
@@ -1,35 +1,32 @@
 /* ProgressBar.css */
 .progress_container {
-    width: 203px;
-    height: 50px;
-    margin: 40px;
-    background-color: #FFF;
-    border: 1px solid rgba(0, 0, 0, 0.23);
-    border-radius: 50px;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  }
+  width: 203px;
+  height: 50px;
+  margin: 40px;
+  background-color: #fff;
+  border-radius: 50px;
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
+}
 
-  
-  
 .progress_bar {
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    width: 96.068px;
-    height: 50px;
-    background: rgba(252, 221, 221, 0.65);
-    color: rgb(0, 0, 0);
-    border-radius: 50px;
-    font-size: 20px;
-    text-align: center;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  width: 96.068px;
+  height: 50px;
+  background: rgba(252, 221, 221, 0.65);
+  color: rgb(0, 0, 0);
+  border-radius: 50px;
+  font-size: 20px;
+  text-align: center;
 }
 
-.progress_bar img{
-    width: 32px;
-    padding: 15px;
+.progress_bar img {
+  width: 32px;
+  padding: 15px;
 }
 
-.top_txt{
-    font-family: "ONESHINHANBOLD";
-    padding-left: 20px;
+.top_txt {
+  font-family: "ONESHINHANBOLD";
+  padding-left: 20px;
 }
