--- a/src/componets/ProgressBar.module.css
+++ b/src/componets/ProgressBar.module.css
@@ -1,20 +1,20 @@
 /* ProgressBar.css */
-.progress_container {
+.progressContainer {
   width: 400px;
-  height: 32.31px;
+  height: 50px;
   margin: 50px;
   margin-left: 50px;
   text-align: left;
   background-color: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.23);
   border-radius: 100px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
+  position: relative;
 }
 
-.progress_bar_lay {
+.progressbarLay {
   display: flex;
   justify-content: left;
-  height: 32.31px;
+  height: 50px;
   align-items: center;
   background: rgba(163, 199, 247, 1);
   border-radius: 100px;
@@ -22,26 +22,24 @@
   position: relative;
 }
 
-.progress_bar_lay_img {
+.progressbarLayImg {
   position: absolute;
-  top: -20px;
-  width: 70px;
+  top: -14px;
+  width: 80px;
 }
 
-.progress_bar_molly {
+.progressbarMolly {
   display: flex;
   justify-content: left;
-  height: 32.31px;
+  height: 50px;
   align-items: center;
   background: #b0a1cc;
   border-radius: 100px;
   font-size: 30px;
-  position: relative;
 }
 
-.progress_bar_molly_img{
+.progressbarMollyImg {
   position: absolute;
-  top: -10px;
-  width: 90px;
-  margin: -15px;
+  top: -23px;
+  width: 115px;
 }
