--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -93,6 +93,10 @@
     height: auto;
     padding: 10px;
   }
+  .loginError {
+    color: red;
+    margin-bottom: 10px;
+  }
 }
 
 @media screen and (min-width: 768px) {
