add : 투자게임 뉴스 시나리오 추가

--- a/src/componets/StockGameNews.module.css
+++ b/src/componets/StockGameNews.module.css
@@ -1,5 +1,5 @@
 /* StockGameNews.module.css */
-.news_wrap {
+.newsWrap {
   position: absolute;
   z-index: 100;
   bottom: 0; /* 시작 위치는 하단에서 */
@@ -7,7 +7,6 @@
   transform: translateX(-50%) translateY(100%); /* translateY 변환 추가 */
   animation: slide-up 0.5s ease-out forwards;
   opacity: 0; /* 초기에는 투명하게 설정 */
-  background-image: url("../assets/images/StockGameNews.png");
 }
 
 @keyframes slide-up {
@@ -16,4 +15,52 @@
     transform: translateX(-50%) translateY(0); /* translateY를 0으로 설정하여 이동 */
     opacity: 1; /* 페이드 인 효과를 위해 투명도를 1로 설정 */
   }
+}
+
+@keyframes slide-up-title {
+  to {
+    top: 160px; /* 목표 위치로 이동 (올라감) */
+    transform: translateX(-50%) translateY(0); /* translateY를 0으로 설정하여 이동 */
+    opacity: 1; /* 페이드 인 효과를 위해 투명도를 1로 설정 */
+  }
+}
+
+@keyframes slide-up-year {
+  to {
+    top: -55px;
+    transform: translateX(-50%) translateY(0);
+    opacity: 1;
+  }
+}
+
+.newsTitleWrap {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) translateY(100%);
+  animation: slide-up-title 0.5s ease-out forwards;
+  opacity: 0;
+}
+
+.newsTitle {
+  width: 720px;
+  list-style: none;
+  font-size: 30px;
+  font-family: Fira Sans;
+  font-style: normal;
+  font-weight: 700;
+  padding: 15px;
+  line-height: 1.5;
+}
+
+.newsYear {
+  font-size: 16px;
+  font-family: Fira Sans;
+  font-style: normal;
+  font-weight: 700;
+  color: gray;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) translateY(100%);
+  animation: slide-up-year 0.5s ease-out forwards;
+  opacity: 0;
 }
