--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,6 @@
   src: url("../assets/font/ONESHINHANMEDIUM.TTF") format("truetype");
 }
 
-
 @font-face {
   font-family: "ONESHINHANLIGHT";
   src: url("../assets/font/ONESHINHANLIGHT.TTF") format("truetype");
@@ -30,4 +29,5 @@
 body {
   font-family: "ONESHINHANLIGHT";
   letter-spacing: -0.1px;
+  background-color: var(--black);
 }
