--- a/src/componets/MenuBox.module.css
+++ b/src/componets/MenuBox.module.css
@@ -4,7 +4,7 @@
   right: 155;
 }
 .menuItem {
-  font-family: "ONESHINHANMEDIUM";
+  font-family: "SOYO Maple Bold";
   cursor: pointer;
   font-size: 20px;
 }
