--- a/src/componets/StockGameNews.module.css
+++ b/src/componets/StockGameNews.module.css
@@ -45,7 +45,7 @@
   width: 720px;
   list-style: none;
   font-size: 30px;
-  font-family: Fira Sans;
+  font-family: "SOYO Maple Bold";
   font-style: normal;
   font-weight: 700;
   padding: 15px;
@@ -54,6 +54,6 @@
 
 .newsYear {
   font-size: 16px;
-  font-family: Fira Sans;
+  font-family: "SOYO Maple Bold";
   padding: 0px 20px;
 }
