--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -69,7 +69,7 @@
     border: none;
     border-radius: 8px;
     margin-bottom: 20px;
-    font-family: Poppins;
+    font-family: "SOYO Maple Regular";
     font-size: 24px;
     cursor: pointer;
   }
