--- a/src/componets/FriendSelectBox.module.css
+++ b/src/componets/FriendSelectBox.module.css
@@ -27,7 +27,7 @@
   bottom: 30px;
   color: #000;
   text-align: center;
-  font-family: Poppins;
+  font-family: "SOYO Maple Bold";
   font-size: 30px;
   font-style: normal;
   font-weight: 500;
