--- a/src/componets/TradingButton.module.css
+++ b/src/componets/TradingButton.module.css
@@ -5,7 +5,7 @@
 }
 
 .year_txt {
-  font-family: "ONESHINHANBOLD";
+  font-family: "SOYO Maple Bold";
   font-size: 26px;
   z-index: 1;
   position: absolute;
@@ -21,7 +21,7 @@
   border-radius: 30px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   color: #fff;
-  font-family: "ONESHINHANBOLD";
+  font-family: "SOYO Maple Bold";
   font-size: 32px;
   cursor: pointer;
   z-index: 1;
