--- a/src/pages/Molly/Molly.module.css
+++ b/src/pages/Molly/Molly.module.css
@@ -24,8 +24,21 @@
 
 .introHeader {
   display: flex;
-  justify-content: flex-end;
+  align-items: center;
+  justify-content: space-between;
   margin-top: -10px;
+}
+
+.homeIcon {
+  width: 83px;
+  height: 77px;
+  margin-left: 30px;
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+.homeIcon:active {
+  transform: scale(0.95); /* 클릭 시 크기를 조절하여 누르는 효과를 줍니다. */
 }
 
 .top {
