--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -7,6 +7,7 @@
   background-image: url("../../assets/images/intro_bg.png");
   background-repeat: repeat;
   animation: backgroundMove 20s linear infinite;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
 }
 
 @keyframes backgroundMove {
