--- a/src/pages/Lay/LayResult.module.css
+++ b/src/pages/Lay/LayResult.module.css
@@ -7,6 +7,7 @@
   background-repeat: repeat;
   animation: backgroundMove 10s linear infinite;
   transition: background-color 0.5s ease;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
 }
 
 .top {
