--- a/src/pages/Molly/Molly.module.css
+++ b/src/pages/Molly/Molly.module.css
@@ -4,10 +4,8 @@
   margin: 20px auto;
   background-color: var(--lay_blue);
   position: relative;
-  background-image: url("../../assets/images/stars.png");
+  background-image: url("../../assets/images/Molly/molly_bg.jpg");
   background-repeat: repeat;
-  animation: backgroundMove 10s linear infinite;
-  transition: background-color 0.5s ease;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
 }
 
